# gs-rs

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FILE_HEADER.txt  LICENSE  LICENSE-MIT  LICENSE-MIT.md  NOTICE  README.md  Review.md  ZU_BESPRECHEN
.github/workflows/: build.yml
benches/: my_benchmark.rs
data_files/: MIT_simple2D_out.g2o  README.md  bad3d.g2o  bad3d_sol1.g2o  fullTestGraph.json  full_2d_visualization.json  invalid_vertex.json  mini_3d.g2o  mini_3d_sol1.g2o  minimal_size_and_types.json  minimal_size_and_types_out.json  obs3d.g2o  obs3d_10.g2o  pos3d.g2o  pos3d_0.g2o  pos3d_1.g2o  pos3d_10.g2o  sphere_3D.g2o  tiny_vehicle_only_2d.json
data_files/full_demos/: all_2d_types.g2o  all_2d_types.json  all_3d_types.g2o  all_3d_types.json  full_2d.json  full_crazy_3d.g2o  tiny_vehicle_only_2d.g2o  tiny_vehicle_only_2d.json
data_files/optimizer_tests/: full2d_0.g2o  obs2d_mainly_1.g2o  obs3d_mainly_1.g2o  odo3d_only_0.g2o  odo3d_only_1.g2o  pos2d_and_odo2d_0.g2o  pos2d_and_odo2d_25.g2o
doc/: documentation.ipynb  literature.bib  main.aux  main.bbl  main.bcf  main.blg  main.run.xml  main.tex  structure.tex
doc/sections/: abstract.tex  algorithm.tex  background.tex  introduction.tex  optimization2d.tex  optimization3d.tex
examples/: README.md  change_file_format.rs  optimization_2d_g2o.rs  optimization_2d_json.rs  optimization_3d_g2o.rs  optimization_3d_json.rs  visualization_2d_g2o.rs  visualization_2d_json.rs  visualization_3d_g2o.rs  visualization_3d_json.rs
examples/io_files/: All_Types_2D.g2o  All_Types_3D.json  MIT_2D.g2o  MIT_2D.json  MIT_2D_optimized.g2o  MIT_2D_optimized.json  Sphere_3D.g2o  Sphere_3D_optimized.g2o
src/: demo.rs  lib.rs
src/calculator/: linear_system.rs  mod.rs
src/factor_graph/: mod.rs
src/factor_graph/constraint/: mod.rs
src/factor_graph/factor/: mod.rs  observation_factor_2d.rs  odometry_factor_2d.rs  position_factor_2d.rs  (+1 more)
src/factorgraph/: mod.rs
src/optimizer/: cleaner_linear_system.rs  linear_system.rs  mod.rs  old_linear_system.rs
src/parser/: g2o.rs  json.rs  mod.rs
src/petgraph_test/: mod.rs
src/solver/: mod.rs
src/solver/lu/: mod.rs
src/visualization/: mod.rs
src/visualizer/: cleaner_mod.rs  mod.rs  old_mod.rs
test_files/: MIT_simple2D_10.g2o  MIT_simple2D_linear.g2o  MIT_simple2D_linear_out.g2o  MIT_simple2D_out.g2o  MIT_simple2D_sol.g2o  dumb.g2o  dumb.json  dumb_out.json  fullTestGraph.json  graphSLAM2dExample.json  minimal_size_and_types.g2o  minimal_size_and_types_copy.g2o  minimal_size_and_types_out.json  minip.g2o  minip_out.g2o  mit-50.g2o  mit-50_out.g2o  mit50_out.g2o  mit64.g2o  mit64_out.g2o  obst.g2o  obst.json  prior_only.g2o  prior_only_out.g2o  rotation_test.g2o  rotation_test.json  rotation_test_out.json  scrambled.g2o  scrambled_out.g2o  testBrokenTrajectory2DAngle.json  testTrajectory2DAngle.json  tiny_vehicle_only_2d.json
test_files/optimizer_tests/: full2d_1.g2o  full2d_25.g2o  obs2d_mainly_0.g2o  obs2d_only_0.g2o  odo2d_only_0.g2o  odo2d_only_1.g2o  pos2d_only_0.g2o
(+34 files in other folders)
