[package]
name = "gs-rs"
version = "0.1.0"
authors = [
    "Samuel Valezuela <samuel.valenzuela@tngtech.com>",
    "Daniel Pape <daniel.pape@tngtech.com>"
]
edition = "2018"
readme="README.md"

documentation="???"
repository="???"
description="Implementation of a basic monocular SLAM (Simultaneous Localization and Mapping) Algorithm in pure Rust."
categories=['science', 'robotics']
keywords=['slam', 'robotics', 'math']
license="Apache-2.0"

[dependencies]
nalgebra = {version = "0.20.0", features = ["sparse"]}
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
petgraph = "0.5.0"
kiss3d = "0.23.0"
itertools = "0.9.0"

[dev-dependencies]
env_logger = "0.7.1"
log = "0.4.8"
approx = "0.3.2"
# both log and approx are only needed in tests, hence I would only include them here. Easy enough to change it.
criterion = "0.3.1"

[[bench]]
name = "my_benchmark"
harness = false