[package]
name = "gs-rs"
version = "0.1.0"
authors = [
    "Samuel Valezuela <samuel.valenzuela@tngtech.com>",
    "Florian Rohm <florian.rohm@tngtech.com>",
    "Daniel Pape <daniel.pape@tngtech.com>"
]
edition = "2018"
readme="README.md"
documentation="https://docs.rs/gs-rs"
repository="https://github.com/TNG/gs-rs"
description="Implementation of a basic monocular SLAM (Simultaneous Localization and Mapping) Algorithm in pure Rust."
categories=['science', 'robotics']
keywords=['slam', 'robotics', 'math']
license="MIT OR Apache-2.0"

[lib]
name = "gs_rs"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
edition = "2018"
crate-type = ["lib"]

[badges]
travis-ci = { repository = "TNG/gs-rs" }
coveralls = { repository = "TNG/gs-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
nalgebra = { version = "0.22.0", features = ["sparse"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
petgraph = "0.5.1"
kiss3d = "0.25.0"
itertools = "0.9.0"

[dev-dependencies]
env_logger = "0.7.1"
log = "0.4.11"
approx = "0.3.2"
criterion = "0.3.3"

[[bench]]
name = "my_benchmark"
harness = false
